# geospatial-network-migration-toolkit

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  cli-reference.md  documentation-framework.md  portable-quickstart.md
docs/superpowers/plans/: 2026-07-16-configuration-inventory.md  2026-07-16-foundation-domain-core.md  2026-07-16-mapping-filter-transformations.md  2026-07-16-workflow-reporting-release.md
docs/superpowers/specs/: 2026-07-16-geospatial-network-migration-toolkit-design.md
examples/configs/: water.yml
examples/data/: water_mains.csv
examples/mappings/: water_reference.csv
schemas/: project-config.schema.json
src/un_migration/: __init__.py  api.py  cli.py
src/un_migration/adapters/: __init__.py
src/un_migration/config/: __init__.py  environment.py  loader.py  merge.py  models.py  render.py
src/un_migration/domain/: __init__.py  artifacts.py  errors.py  findings.py  identity.py  runs.py  schema.py  serialization.py  status.py  time.py
src/un_migration/evidence/: __init__.py  events.py  (+1 more)
templates/: data-readiness-checklist.md  filter-configuration-template.yml  migration-plan-template.md  qa-qc-checklist.md  validation-report-template.md
tests/: __init__.py
tests/cli/: test_config.py  test_doctor.py  test_filter.py  test_inventory.py  test_reference.py  test_run.py  test_version.py
tests/contract/: __init__.py  source_contract.py  test_memory_source.py  test_port_shapes.py
tests/integration/: test_csv_source.py
tests/unit/: test_package.py
(+77 files in other folders)
